--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
   height: 180px;
   border-radius: 5px;
   padding:2px;
-  background-color: #F6F7EB;
+  background-color: #6960b5;
   display: block;
   -webkit-box-shadow: 2px -2px 9px -1px rgba(0,0,0,1);
   -moz-box-shadow: 2px -2px 9px -1px rgba(0,0,0,1);
@@ -71,22 +71,13 @@ body {
   font-weight: bold;
   font-size: 28px;
   padding:2px;
-  background-color: #F6F7EB;
+  background-color: #6960b5;
   display: flex;
-  -webkit-box-shadow: 2px -2px 9px -1px rgba(0,0,0,1);
-  -moz-box-shadow: 2px -2px 9px -1px rgba(0,0,0,1);
-  box-shadow: 2px -2px 9px -1px rgba(0,0,0,1);
   margin:15px;
 }
 
 .back {
   background: #36c;
-  background:
-  linear-gradient(115deg, transparent 75%, rgba(255,255,255,.8) 75%) 0 0,
-  linear-gradient(245deg, transparent 75%, rgba(255,255,255,.8) 75%) 0 0,
-  linear-gradient(115deg, transparent 75%, rgba(255,255,255,.8) 75%) 7px -15px,
-  linear-gradient(245deg, transparent 75%, rgba(255,255,255,.8) 75%) 7px -15px,
-  #36c;
   background-size: 15px 30px;
   width:96%;
   height: 98%;
@@ -125,7 +116,7 @@ body {
 }
 
 .border-line {
-  border:4px dashed #F6F7EB;
+  border:4px dashed ##6960b5;
   opacity: 0.4;
   margin: 20px 0;
 }
@@ -134,11 +125,9 @@ body {
   position: relative;
   text-align: center;
   font-family: Gill Sans;
-  color: #F6F7EB;
+  color: #000;
   opacity: 0.7;
   font-size: 20px;
-  z-index:10;
-  text-shadow: 1px 1px 2px rgba(10, 10, 10, 1);
 }
 
 /* footer */
@@ -169,7 +158,7 @@ button {
   font-size: 20px;
   text-decoration: none;
   margin: 20px;
-  color: #F6F7EB;
+  color: ##6960b5;
   position: relative;
   display: inline-block;
   font-family: Gill Sans;
@@ -182,17 +171,4 @@ button:active {
   box-shadow: 0px .5px 0px 0px;
 }
 
-button:disabled {
-  background-color: #999;
-  box-shadow: 0px 5px 0px 0px #AAA;
-}
 
-button:disabled:hover {
-  background-color: #999;
-}
-
-button:disabled:active {
-  transform: translate(0px, 0px);
-  -webkit-transform: translate(0px, 0px);
-  box-shadow: 0px 5px 0px 0px #AAA;
-}
